force-app/main/default/objects/site__c/site__c.object-meta.xml
<CustomObject>
    <label>site</label>
    <nameField>
        <label>site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>