force-app/main/default/objects/site__c/fields/company_name__c.field-meta.xml
<CustomField>
    <fullName>company_name__c</fullName>
    <label>company name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RSK construction</fullName>
            </value>
            <value>
                <fullName>Shri ji</fullName>
            </value>
            <value>
                <fullName>P.D. agrawal</fullName>
            </value>
            <value>
                <fullName>D.R. agrawal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>