force-app/main/default/objects/site__c/fields/operator_name__c.field-meta.xml
<CustomField>
    <fullName>operator_name__c</fullName>
    <label>operator name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>