force-app/main/default/objects/site__c/fields/salary__c.field-meta.xml
<CustomField>
    <fullName>salary__c</fullName>
    <formula>IF(operator_name__c=&apos;Bheem&apos;, 13000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>