force-app/main/default/objects/site__c/fields/site_location__c.field-meta.xml
<CustomField>
    <fullName>site_location__c</fullName>
    <label>site location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>company_name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Khalwa</fullName>
            </value>
            <value>
                <fullName>Dharampuri</fullName>
            </value>
            <value>
                <fullName>Gandhi nagar</fullName>
            </value>
            <value>
                <fullName>Super corridor</fullName>
            </value>
            <value>
                <fullName>Rau bypass &amp; piplihana</fullName>
            </value>
            <value>
                <fullName>Dewas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>